--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
@@ -1,34 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	version="4.0">
 	<servlet>
-	<servlet-name>TestServlet</servlet-name>
+		<servlet-name>TestServlet</servlet-name>
 		<servlet-class>it.polimi.tiw.test.TestServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-	<servlet-name>TestServlet</servlet-name>
+		<servlet-name>TestServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<display-name>TIW-PlaylistMusicale</display-name>
-	<context-param>
-		<param-name>dbUrl</param-name>
-		<param-value>jdbc:mysql://localhost:3306/bom?serverTimezone=UTC</param-value>
-	</context-param>
-	<context-param>
-		<param-name>dbUser</param-name>
-		<param-value>root</param-value>
-	</context-param>
-	<context-param>
-		<param-name>dbPassword</param-name>
-		<param-value>Giuseppe8</param-value>
-	</context-param>
-	<context-param>
-		<param-name>dbDriver</param-name>
-		<param-value>com.mysql.cj.jdbc.Driver</param-value>
-	</context-param>
-	<welcome-file-list>
-		<welcome-file>GoToHomePage</welcome-file>
-	</welcome-file-list>
 </web-app>
