--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>TIW-PlaylistMusicale</display-name>
 	<context-param>
 		<param-name>dbUrl</param-name>
-		<param-value>jdbc:mysql://localhost:3306/bom?serverTimezone=UTC</param-value>
+		<param-value>jdbc:mysql://localhost:3306/playlistmusicale?serverTimezone=UTC</param-value>
 	</context-param>
 	<context-param>
 		<param-name>dbUser</param-name>
@@ -14,7 +14,7 @@
 	</context-param>
 	<context-param>
 		<param-name>dbPassword</param-name>
-		<param-value>tiw</param-value>
+		<param-value>Giuseppe8</param-value>
 	</context-param>
 	<context-param>
 		<param-name>dbDriver</param-name>
