--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	</context-param>
 	<context-param>
 		<param-name>dbPassword</param-name>
-		<param-value>Giuseppe8</param-value>
+		<param-value>tiw-password</param-value>
 	</context-param>
 	<context-param>
 		<param-name>dbDriver</param-name>
