--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,6 @@
 		<param-value>com.mysql.cj.jdbc.Driver</param-value>
 	</context-param>
 	<welcome-file-list>
-		<welcome-file>GoToHomePage</welcome-file>
+		<welcome-file>GoToLogin</welcome-file>
 	</welcome-file-list>
 </web-app>
