--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/web.xml
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	version="4.0">
-	<display-name>TIW-PlaylistMusicale</display-name>
+	<display-name>TIW-PlaylistMusicaleJS</display-name>
 	<context-param>
 		<param-name>dbUrl</param-name>
 		<param-value>jdbc:mysql://localhost:3306/playlistmusicale?serverTimezone=UTC</param-value>
