Better DB, moved user folder outside

--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/web.xml
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 	</context-param>
 	<context-param>
 		<param-name>userFilesDirectory</param-name>
-		<param-value>C:\Users\Pietro Ammaturo\github\TIW-Project\TIW-PlaylistMusicaleJS\user</param-value>
+		<param-value>C:\Users\Pietro Ammaturo\github\TIW-Project\userPietro</param-value>
 	</context-param>
 	<welcome-file-list>
 		<welcome-file>GoToLogin</welcome-file>
